add some updates
